fix document badge list on mobile

--- a/app/styles/custom-components/_vlc-document-list.scss
+++ b/app/styles/custom-components/_vlc-document-list.scss
@@ -11,10 +11,19 @@
 .vlc-document-list__item {
   list-style: none;
   margin: 0.5rem 1rem 0.5rem 0;
+  padding-left: 1.25rem;
+  position: relative;
+
+  .vlc-document-list__position { 
+    flex: none;
+    position: absolute;
+    top: .25ex;
+    left: 0;
+  }
 
   a, span:not(.au-c-pill) {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     padding-right: .5rem;
 
     color: $auk-gray-600;
@@ -31,7 +40,7 @@
     &:hover,
     &:active {
       background: $auk-gray-100;
-      border-radius: 1.5rem;
+      border-radius: 1rem;
     }
 
     &:focus {
@@ -41,6 +50,7 @@
 
   .au-c-icon {
     margin-right: 0.5rem;
+    bottom: -.5ex;
   }
 
   .au-c-pill {
